--- a/src/app/css/product.css
+++ b/src/app/css/product.css
@@ -13,7 +13,7 @@
   width: 100%;
   height: 100%;
   display: flex;
-  background: #f8f8ff;
+  background: #fff8ff;
   display: flex;
   flex-direction: column;
 }
@@ -547,7 +547,7 @@
 
 .products-page .products .list-category-section {
   width: 100%;
-  min-height: 600px;
+  min-height: 800px;
   display: flex;
   flex-direction: row;
 }
@@ -557,6 +557,7 @@
   height: auto;
   display: flex;
   flex-direction: column;
+  margin-top: 40px;
 }
 
 .products-page .product-category .category-main {
