--- a/src/app/css/navbar.css
+++ b/src/app/css/navbar.css
@@ -34,6 +34,7 @@
 .home-navbar .navbar-container .menu .links .login-button{
   line-height: normal;
   border-radius: 20px;
+  color: white;
   background: rgb(191, 97, 89);
 }
 .home-navbar .navbar-container .menu .user-avatar{
@@ -142,6 +143,7 @@
     font-weight: 400;
     line-height: normal;
     border-radius: 20px;
+    color: white;
     background: rgb(191, 97, 89);
 }
 .home-navbar .navbar-container .logo-frame {
@@ -194,6 +196,7 @@
 .other-navbar .navbar-container .menu .links .login-button{
   line-height: normal;
   border-radius: 20px;
+  color: white;
   background: rgb(191, 97, 89);
 }
 .other-navbar .navbar-container .menu .user-avatar{
@@ -253,7 +256,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    background: #d7b586;
+    background: rgb(191, 97, 89); /* Background color */
     border-width: 1px 0px;
     border-style: solid;
     border-color: #343434;
@@ -350,7 +353,7 @@
   }
   
   .basket-frame .orders-wrapper::-webkit-scrollbar-thumb {
-    background-color: #888;
+    background-color: rgb(191, 97, 89); /* Background color */
     border-radius: 5px;
   }
   
