--- a/src/app/css/product.css
+++ b/src/app/css/product.css
@@ -94,10 +94,10 @@
   position: relative;
   width: 100px;
   height: 33px;
-  color: rgb(191,97,89);
+  color: white;
   display: flex;
   border-radius: 18px;
-  background: #343434;
+  background: rgb(191,97,89);
 }
 
 .products-page .products .prev-btn,
@@ -181,7 +181,7 @@
 .products-page .products .product-card .product-img {
   position: relative;
   width: 273px;
-  height: 275px;
+  height: 350px;
   background-size: cover;
   border-radius: 0px 50px 0px 0px;
 }
@@ -193,7 +193,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background: #ff9200;
+  background: rgb(191, 97, 89); /* Background color */
   box-shadow: 4px 6px 20px #0000001a;
   border-radius: 25px;
   font-family: "Poppins";
@@ -201,7 +201,7 @@
   font-weight: 600;
   font-size: 12px;
   line-height: 21px;
-  color: rgb(191,97,89);
+  color: white
 }
 
 .products-page .products .product-card .product-desc {
@@ -327,7 +327,7 @@
   width: 100%;
   height: 630px;
   display: flex;
-  background-color: #0d1518;
+  background-color: rgb(191, 97, 89);
 }
 
 .products-page .products .brands-logo .family-brands {
@@ -345,7 +345,7 @@
 }
 
 .products-page .products .brands-logo .category-title {
-  color: rgb(191, 97, 89);
+  color: white;
   font-family: Prata;
   font-size: 64px;
   font-weight: 400;
@@ -360,16 +360,18 @@
   width: 260px;
   height: 350px;
   display: flex;
+  justify-content: space-between;
   object-fit: fill;
   box-shadow: 0px -1px 13px 5px #c8b3b340;
-  border-radius: 20px;
+  border-radius: 50px;
 }
 
 .products-page .products .brands-logo .review-img {
-  width: 110px;
-  height: 110px;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-  border-radius: 37px;
+  width: 100%;
+  height: 100%;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.80));
+  border-radius: 30px;
+  object-fit: cover;
 }
 
 .products-page .products .brands-logo .review-name {
@@ -420,28 +422,40 @@
   background-size: cover;
   background-position: center;
 }
-
 .products-page .products .address {
   margin-bottom: 60px;
-  height: auto;
-  background: #f8f8ff;
-  color: rgb(191,97,89);
+  width: 100%;
+  height: 100vh; /* Full height of the viewport */
+  background: rgb(191, 97, 89); /* Background color */
 }
 
 .products-page .products .address .address-area {
-  margin-top: 60px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 100%; /* Full height */
 }
 
 .products-page .products .address .title {
-  font-family: "Dancing Script";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 43px;
+  color: white;
+  font-family: Prata;
+  font-size: 64px;
+  font-weight: 400;
+  line-height: 84.5px;
+  letter-spacing: 0%;
+  
+  padding: 20px; /* Add padding for spacing */
+  text-align: center;
+  width: 100%; /* Full width */
 }
+
+.products-page .products .address .map-frame {
+  margin-top: 20px;
+  width: 100%; /* Full width */
+  height: calc(100% - 100px); /* Full height minus title height */
+  border: none; /* Remove iframe border */
+}
+
 
 .products-page .products .about-left .about-left-desc {
   padding: 20px;
